--- a/lang/tr.po
+++ b/lang/tr.po
@@ -412,7 +412,7 @@ msgid "Please enter the filename for the certificate."
 msgstr "Lütfen sertifika ismini giriniz."
 
 #: ExportCert#4
-msgid "Certifikate export"
+msgid "Certificate export"
 msgstr "Sertifika dışa aktar"
 
 #: ExportDer#1
@@ -1043,7 +1043,7 @@ msgid "CRL Number"
 msgstr ""
 
 #: NewCrl#15
-msgid "Revokation reasons"
+msgid "Revocation reasons"
 msgstr ""
 
 #: NewKey#1
@@ -1977,7 +1977,7 @@ msgid "%1 is longer than %2 bytes: '%3'"
 msgstr ""
 
 #: Revoke#1
-msgid "Revokation details"
+msgid "Revocation details"
 msgstr ""
 
 #: Revoke#2
@@ -1985,7 +1985,7 @@ msgid "Invalid since"
 msgstr ""
 
 #: Revoke#3
-msgid "Revokation reason"
+msgid "Revocation reason"
 msgstr ""
 
 #: SelectToken#1
@@ -2086,7 +2086,7 @@ msgid "CRL ( *.pem *.der *.crl )"
 msgstr ""
 
 #: db_crl#10
-msgid "Revokation list export"
+msgid "Revocation list export"
 msgstr ""
 
 #: db_crl#11
